fix: overflow in table

--- a/style/dashboard.css
+++ b/style/dashboard.css
@@ -142,6 +142,7 @@ table {
   width: 100%;
   float: bottom;
   table-layout: fixed;
+  overflow: hidden;
 }
 
 th {
